# GHUB_Serial

./: CMakeLists.txt  Main.qml  Package.bat  README.md  autostartmanager.cpp  autostartmanager.h  crc32.cpp  crc32.h  globalkeyboardhook.cpp  globalkeyboardhook.h  installscript.qs  main.cpp  resources.rc  serialportinfomodel.cpp  serialportinfomodel.h  serialportmanager.cpp  serialportmanager.h
